refactor api (cleanup), fix minor protected column
